[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUIs/ObjectInfos/EnergyGraphs/EnergyGraph.gd" type="Script" id=2]
[ext_resource path="res://assets/Shaders/EnergyWave.shader" type="Shader" id=3]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.502347 )
colors = PoolColorArray( 1, 0, 1, 1, 0, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 33
outline_size = 1
outline_color = Color( 0, 1, 1, 1 )
font_data = SubResource( 4 )

[node name="EnergyGraph" type="ColorRect"]
material = SubResource( 1 )
margin_right = 442.0
margin_bottom = 131.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyLine" type="Line2D" parent="."]
material = SubResource( 2 )
width = 7.0
gradient = SubResource( 3 )

[node name="EnergyInfo" type="Label" parent="EnergyLine"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 225.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "Energy Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="EnergyLine"]
wait_time = 0.001
autostart = true
[connection signal="timeout" from="EnergyLine/Timer" to="." method="_on_Timer_timeout"]
